tests/miniJava/neg/001580_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new true [ 0 ] ; } }
